--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+  <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
 
-    <ul class="navbar-nav mr-auto">
+    <ul *ngIf="isLoggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -13,15 +13,14 @@
         <a class="nav-link" href="#">Messages</a>
       </li>
     </ul>
-    <div *ngIf="isLoggedIn();else loginFormTempalte" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Welcome User
+    <div *ngIf="isLoggedIn();else loginFormTempalte" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
 
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <div class="dropdown-menu mt-3" aria-labelledby="dropdownMenuLink" *dropdownMenu>
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Logout</a>
+        <a class="dropdown-item" href="#" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
       </div>
     </div>
     <ng-template #loginFormTempalte>
@@ -33,5 +32,5 @@
         <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
       </form>
     </ng-template>
-  </nav>
-</div>
+  </div>
+</nav>
