--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,7 @@
 <div class="container" style="margin-top: 5rem;">
+  <div class="row" style="margin-left: 5px;">
+    <h1>{{user.knownAs}}'s Profile</h1>
+    </div>
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
