--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
 
     <ul *ngIf="isLoggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/member-list']">Matches</a>
+        <a class="nav-link" [routerLink]="['/members']">Matches</a>
       </li>
       <li class="nav-item"  routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/list']">Lists</a>
@@ -19,7 +19,7 @@
       </a>
 
       <div class="dropdown-menu mt-3" aria-labelledby="dropdownMenuLink" *dropdownMenu>
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
+        <a class="dropdown-item" [routerLink]="['/member/edit']"><i class="fa fa-user"></i> Edit Profile</a>
         <a class="dropdown-item" href="#" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
       </div>
     </div>
