--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="card">
-                <img class="card-image-top img-thumbnail" [src]="user.photoUrl" alt="user photo">
+                <img class="card-image-top img-thumbnail" [src]="photoUrl" alt="user photo">
                 <div class="card-body">
                     <div>
                         <strong>Location:</strong>
@@ -62,8 +62,7 @@
                         </form>
                     </tab>
                     <tab heading="Edit Photos">
-                        <h4>Interests</h4>
-                        <p>{{user.interests}}</p>
+                        <app-photo-editor (updatePhotoEvent)="UpdatePhotoEventHandler($event)" [photos]= "user.photos"></app-photo-editor>
                     </tab>
                 </tabset>
             </div>
