--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img [src]="user.photoUrl" class="card-img-top" alt="photo">
+    <img src="{{user.photoUrl || '../../assets/user.png' }}" class="card-img-top" alt="photo">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" [routerLink]="['/members/', user.id]"><li class="fa fa-user"></li></button></li>
       <li class="list-inline-item"><button class="btn btn-primary"><li class="fa fa-heart"></li></button></li>
