--- a/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
+++ b/DatingApp-SPA/src/app/members/member-messages/member-messages.component.html
@@ -42,11 +42,11 @@
         </ul>
     </div>
     <div class="card-footer">
-        <form action="">
+        <form #messageForm ="ngForm" (ngSubmit)=" messageForm.valid &&  sendMessage()">
             <div class="input-group">
-                <input type="text" class="form-control input-sm" placeholder="Send a private message">
+                <input name="content" [(ngModel)]="message.content" type="text" class="form-control input-sm" placeholder="Send a private message" required>
                 <div class="input-group-append">
-                    <button class="btn btn-primary">Send</button>
+                    <button class="btn btn-primary" [disabled] = "!messageForm.valid">Send</button>
                 </div>
             </div>
         </form>
